# bankbotvision

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .env.example  pyproject.toml
api/app/: config.py  deps.py  main.py
api/app/models/: account.py
api/app/routers/: accounts.py  agent.py  auth.py  face.py  voice.py
api/app/services/: accounts_service.py
api/tests/: test_accounts.py  test_frontdesk.py
db/: policies.sql  schema.sql  seed.sql
web/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(inner)/: layout.tsx
web/src/app/(inner)/account/: page.tsx
web/src/app/(inner)/chat/: page.tsx
web/src/app/(inner)/login/: page.tsx
web/src/app/(inner)/signup/: page.tsx
web/src/app/account/: page.tsx
web/src/app/desk/: page.tsx
web/src/app/login/: page.tsx
web/src/app/signup/: page.tsx
web/src/components/: AccountForm.tsx  DisclaimerBanner.tsx  FaceCapture.tsx  Robot.tsx  RobotScene.tsx  RobotSingle.tsx
web/src/hooks/: useFaceApi.ts  useVoiceChat.ts
web/src/lib/: api.ts  branchDesk.ts  supabaseServer.ts
web/src/types/: account.ts
