[project]
name = "bankbotvision-api"
version = "0.1.0"
description = "BankBot Vision FastAPI service (Phase 1: account CRUD over Supabase)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "supabase>=2.8",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
